fix(kyc): close masking boundary leaks